--- a/w1w/interfaz/css/style.css
+++ b/w1w/interfaz/css/style.css
@@ -13,19 +13,19 @@ body, html {
 
 @keyframes cambioColor {
     0% {
-        background: linear-gradient(90deg, rgba(255, 0, 0, 0.555) 30%, rgba(1, 114, 129, 0.555) 90%);
+        background: linear-gradient(90deg, rgba(255, 0, 0, 0.829) 50%, rgb(255, 136, 0) 100%);
     }
     25% {
-        background: linear-gradient(90deg, rgba(255, 102, 0, 0.555) 30%, rgba(0, 19, 128, 0.555) 90%);
+        background: linear-gradient(90deg, rgb(255, 238, 0) 50%, rgb(72, 255, 0) 100%);
     }
     50% {
-        background: linear-gradient(90deg, rgba(128, 119, 0, 0.555) 30%, rgba(111, 0, 255, 0.555) 90%);
+        background: linear-gradient(90deg, rgb(0, 238, 255) 50%, rgb(0, 47, 255) 100%);
     }
     75% {
-        background: linear-gradient(90deg, rgba(179, 255, 0, 0.555) 30%, rgba(128, 0, 85, 0.555) 90%);
+        background: linear-gradient(90deg, rgb(132, 0, 255) 50%, rgb(255, 0, 179) 100%);
     }
     100% {
-        background: linear-gradient(90deg, rgba(58, 128, 0, 0.555) 30%, rgba(129, 1, 1, 0.555) 90%);
+        background: linear-gradient(90deg, rgb(255, 103, 2) 50%, rgb(255, 0, 0) 100%);
     }
 }
 
